# workspace-lint

./: Cargo.toml  README.md  dist-workspace.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/: centralized_deps.rs  claude_md_freshness.rs  cli.rs  cli_crate_version.rs  config.rs  crate_size.rs  expand.rs  file_size.rs  freshness.rs  main.rs  mise_tasks.rs  unused_deps.rs  wasm_bindgen_version.rs  workspace.rs
src/unused_pub/: mod.rs
src/unused_pub/tests/: decl_map.rs  filters.rs  helpers.rs  integration.rs  mod.rs  references.rs  visibility.rs
tests/: integration.rs
tests/fixtures/centralized_deps_clean/crates/alpha/: Cargo.toml
tests/fixtures/centralized_deps_violation/: Cargo.toml
tests/fixtures/centralized_deps_violation/crates/alpha/: Cargo.toml
tests/fixtures/config_both/: .workspace-lint.toml  Cargo.toml
tests/fixtures/config_standalone/: .workspace-lint.toml
tests/fixtures/unused_deps_clean/crates/alpha/: Cargo.toml
tests/fixtures/unused_deps_clean/crates/alpha/src/: lib.rs
tests/fixtures/unused_deps_violation/: Cargo.toml
tests/fixtures/unused_deps_violation/crates/alpha/: Cargo.toml
tests/fixtures/unused_deps_violation/crates/alpha/src/: lib.rs
