[package]
name = "workspace-lint"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
fs-err = "3"
tokei = { version = "14", default-features = false }
ignore = "0.4"
globset = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
