[package]
name = "workspace-lint"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
fs-err = "3"
tokei = { version = "14", default-features = false }
ignore = "0.4"
globset = "0.4"
strip-ansi-escapes = "0.2"
clap = { version = "4", features = ["derive"] }
regex = "1"
scip = "0.6"
protobuf = "3"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
